# sparky

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  bun.lockb  package-lock.json  package.json  pyproject.toml  vite.config.ts  vitest.config.ts
.github/: dependabot.yml
.github/workflows/: ci-skip.yml  ci.yml
design/: dev_workflow.py  object-model.mermaid  workflow-transitions.mermaid
docs/: agent-platform-internals-report.md  agents-and-skills.md  architecture.md  providers.md  setup.md  tools.md
sparky-worker/: package-lock.json  package.json  tsconfig.json
sparky-worker/scripts/: copy-native.js
sparky-worker/src/: config.ts  db.ts  error-classifier.ts  ipc.ts  main.ts  repo-context.ts  session-manager.ts  session-runner.ts  types.ts  util.ts
src/: App.css  App.tsx  db.ts  github.ts  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: agent_tools.rs  execution_log.rs  git_ops.rs  github_auth.rs  lib.rs  litellm_proxy.rs  main.rs  ollama_proxy.rs  worker_manager.rs
src/components/: AgentDetail.tsx  AgentsList.tsx  AnalysisView.tsx  ErrorMessage.tsx  PlanView.tsx  SkillDetail.tsx  SkillsList.tsx  UserSettings.tsx  WorkspaceDetail.tsx  WorkspaceList.tsx
src/data/: agents.ts  analyseIssue.ts  criticPlan.ts  dbUtils.ts  executePlan.ts  executionPlans.ts  generatePlan.ts  issueAnalyses.ts  issueWorktrees.ts  jsonExtract.ts  litellmModels.ts  llm.ts  ollamaModels.ts  openrouterModels.ts  replanCheck.ts  repos.ts  shared.ts  skills.ts  stepResults.ts  tools.ts  (+4 more)
(+47 files in other folders)
