[project]
name = "sparky"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Marlin Forbes", email = "marlinf@datashaman.com" }
]
requires-python = ">=3.13"
dependencies = [
    "claude-agent-sdk",
    "PyGithub",
    "jira",
]

[project.scripts]
sparky = "sparky:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
